ready for the loop, EOD friday 5/31

--- a/sca.ipynb
+++ b/sca.ipynb
@@ -36,7 +36,9 @@
     "# path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/'\n",
     "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/20170401_clipped.tif'\n",
     "\n",
-    "# for f in sorted(glob.glob(os.path.join(path,'*.tif'))):\n",
+    "\n",
+    "##LOOP - change path to f....2 spots)\n",
+    "# for f in sorted(glob.glob(os.path.join(path, '*.tif'))):\n",
     "raster = io.imread(path)\n",
     "print(\"raster shape\",raster.shape)\n",
     "# io.imshow(raster[:,:,0]) #snow depth, band1\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +179,19 @@
        "0  0.375572  996.477481  84.447244"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(np.array([[mu_sd, sca_km, p_basin]]),columns=['meanSD','SCA (km)','% basin'])\n"
+    "pd.DataFrame(np.array([[mu_sd, sca_km, p_basin]]),columns=['meanSD (m)','SCA (km)','% basin'])\n",
+    "\n",
+    "# mu_sd=[5,4,3]\n",
+    "# sca_km=[6,7,8]\n",
+    "# p_basin = [1,2,3]\n",
+    "\n",
+    "# pd.DataFrame.append(np.array([[mu_sd, sca_km, p_basin]]),columns=['meanSD','SCA (km)','% basin'])\n"
    ]
   },
   {
