it loops, still negative values 2017 and 18

--- a/sca.ipynb
+++ b/sca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,27 +16,168 @@
     "import rasterio\n",
     "import subprocess as sp\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "# import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_sd= []\n",
-    "sca_km= []\n",
-    "p_basin = []"
+    "\n",
+    "# mu_sd= np.array([])\n",
+    "# sca_km= np.array([])\n",
+    "# p_basin = np.array([])\n",
+    "\n",
+    "sd_lst = np.array([])\n",
+    "sc_lst = np.array([])\n",
+    "pb_lst = np.array([])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170129_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170303_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170401_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170502_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170604_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170709_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170717_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170727_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20170816_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20180423_clipped.tif\n",
+      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test/20180528_clipped.tif\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meanSD (m)</th>\n",
+       "      <th>SCA (km)</th>\n",
+       "      <th>% basin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.376816</td>\n",
+       "      <td>9.997786e+02</td>\n",
+       "      <td>8.472700e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.384862</td>\n",
+       "      <td>1.021126e+03</td>\n",
+       "      <td>8.653614e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.375572</td>\n",
+       "      <td>9.964775e+02</td>\n",
+       "      <td>8.444724e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.352039</td>\n",
+       "      <td>9.340390e+02</td>\n",
+       "      <td>7.915585e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.282234</td>\n",
+       "      <td>7.488316e+02</td>\n",
+       "      <td>6.346030e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.089248</td>\n",
+       "      <td>2.367961e+02</td>\n",
+       "      <td>2.006746e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.055746</td>\n",
+       "      <td>1.479055e+02</td>\n",
+       "      <td>1.253436e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-5726.493164</td>\n",
+       "      <td>-1.519368e+07</td>\n",
+       "      <td>-1.287600e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.009481</td>\n",
+       "      <td>2.515599e+01</td>\n",
+       "      <td>2.131864e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-5545.472168</td>\n",
+       "      <td>-1.471339e+07</td>\n",
+       "      <td>-1.246898e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-5550.357910</td>\n",
+       "      <td>-1.472636e+07</td>\n",
+       "      <td>-1.247996e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     meanSD (m)      SCA (km)       % basin\n",
+       "0      0.376816  9.997786e+02  8.472700e+01\n",
+       "1      0.384862  1.021126e+03  8.653614e+01\n",
+       "2      0.375572  9.964775e+02  8.444724e+01\n",
+       "3      0.352039  9.340390e+02  7.915585e+01\n",
+       "4      0.282234  7.488316e+02  6.346030e+01\n",
+       "5      0.089248  2.367961e+02  2.006746e+01\n",
+       "6      0.055746  1.479055e+02  1.253436e+01\n",
+       "7  -5726.493164 -1.519368e+07 -1.287600e+06\n",
+       "8      0.009481  2.515599e+01  2.131864e+00\n",
+       "9  -5545.472168 -1.471339e+07 -1.246898e+06\n",
+       "10 -5550.357910 -1.472636e+07 -1.247996e+06"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/'\n",
+    "# path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/'\n",
+    "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/batch_test'\n",
     "#path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clipped/20170401_clipped.tif'\n",
     "\n",
     "\n",
@@ -69,12 +210,13 @@
     "#     plt.show()\n",
     "\n",
     "    # meanSD -- caclulate mean snow depth (meanSD), without zero snow pixels\n",
-    "    mu_sd = np.mean(sno_mask) #mean snow depth, from sca \n",
-    "    print(\"mean snow depth\", mu_sd,'meters')\n",
+    "    mu_sd = np.nanmean(sno_mask) #mean snow depth, from sca (SOME LIDAR HAVE NANS IN THE CLIPPED)\n",
+    "    \n",
+    "#     print(\"mean snow depth\", mu_sd,'meters')\n",
     "\n",
     "\n",
     "    # SCA -- pixs snow cover * pixel size\n",
-    "    num_pix = np.sum(sno_mask) #number of pixels with snow cover (sum the 1's)\n",
+    "    num_pix = np.nansum(sno_mask) #number of pixels with snow cover (sum the 1's)\n",
     "#     print(\"number pixels with snow cover\",num_pix)\n",
     "    \n",
     "    ras =  rasterio.open(f) #CHANGE FOR LOOP\n",
@@ -86,80 +228,63 @@
     "    sca = num_pix * pixelSizeX * pixelSizeY\n",
     "    sca_km = sca/1000**2\n",
     "    p_basin = sca_km/1180 *100  #per Hedrick et al. 2018\n",
-    "    print('Snow Covered Area (SCA) = ', sca, 'm^2')\n",
-    "    print('Snow Covered Area (SCA) = ', sca_km, 'km^2')\n",
-    "    print('% Basin snow cover', p_basin, '%')\n",
+    "#     print('Snow Covered Area (SCA) = ', sca, 'm^2')\n",
+    "#     print('Snow Covered Area (SCA) = ', sca_km, 'km^2')\n",
+    "#     print('% Basin snow cover', p_basin, '%')\n",
     "    \n",
     "#     array.close()\n",
     "#     sno_mask.close()\n",
-    "    ras.close()"
+    "#     ras.close()\n",
+    "    sd_lst = np.append(sd_lst,mu_sd)\n",
+    "    sc_lst = np.append(sc_lst,sca_km)\n",
+    "    pb_lst = np.append(pb_lst,p_basin)\n",
+    "\n",
+    "\n",
+    "df1 = pd.DataFrame(zip(sd_lst,sc_lst,pb_lst),columns = ['meanSD (m)','SCA (km)','% basin'])\n",
+    "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 100, 200, 300, 400]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/meganmason/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/ipykernel_launcher.py:22: FutureWarning: from_items is deprecated. Please use DataFrame.from_dict(dict(items), ...) instead. DataFrame.from_dict(OrderedDict(items)) may be used to preserve the key order.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "zip argument #1 must support iteration",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-481ac10806ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m#     p_basin.append()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mdf1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_items\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu_sd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;31m# pd.DataFrame.from_items(sca_km)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# pd.DataFrame.from_items(p_basin)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mfrom_items\u001b[0;34m(cls, items, columns, orient)\u001b[0m\n\u001b[1;32m   1780\u001b[0m                       FutureWarning, stacklevel=2)\n\u001b[1;32m   1781\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1782\u001b[0;31m         \u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1783\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1784\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0morient\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'columns'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/pandas/compat/__init__.py\u001b[0m in \u001b[0;36mlzip\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 129\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    130\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: zip argument #1 must support iteration"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mu_sd= []\n",
-    "sca_km= []\n",
-    "p_basin = []\n",
+    "fig, a=plt.subplots(3,1)\n",
     "\n",
-    "col=['a','b','c']\n",
+    "a[0].plot(df1['meanSD (m)'])\n",
+    "a[1].plot(df1['SCA (km)'])\n",
+    "a[2].plot(df1['% basin'])\n",
     "\n",
-    "for i in range(5):\n",
-    "   \n",
-    "    mu_sd.append(100*i)\n",
-    "    sca_km.append(5-i)\n",
-    "    p_basin.append(i)\n",
-    "#     mu_= 100*i\n",
-    "#     print(mu_)\n",
-    "#     sca_km= 4+6+i\n",
-    "#     p_basin = .5*i\n",
+    "# sns.set_style('darkgrid')\n",
+    "# sns.set_style(\"ticks\")\n",
+    "# sns.set_context('notebook')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mu_sd= []\n",
+    "# sca_km= []\n",
+    "# p_basin = []\n",
     "\n",
-    "print(mu_sd)\n",
-    "#     mu_sd.append(md_) \n",
-    "#     sca_km.append() \n",
-    "#     p_basin.append()\n",
+    "foo = [1,2,3]\n",
+    "moo = [4,5,6]\n",
+    "boo = [7,8,9]\n",
     "\n",
-    "df1 = pd.DataFrame.from_items(mu_sd)\n",
-    "# pd.DataFrame.from_items(sca_km)\n",
-    "# pd.DataFrame.from_items(p_basin)\n",
-    "# pd.DataFrame(np.array([[mu_sd, sca_km, p_basin]]),columns=['meanSD (m)','SCA (km)','% basin'])\n",
+    "col=['f','m','b']\n",
+    " \n",
+    "# big_list = [(foo,moo,boo)]\n",
+    "big_list = [(foo,moo,boo)]\n",
+    "# print(big_list)\n",
     "\n",
-    "# mu_sd=[5,4,3]\n",
-    "# sca_km=[6,7,8]\n",
-    "# p_basin = [1,2,3]\n",
-    "\n",
-    "# pd.DataFrame.append(np.array([[mu_sd, sca_km, p_basin]]),columns=['meanSD','SCA (km)','% basin'])\n"
+    "# df1 = pd.DataFrame(big_list,columns=col)\n",
+    "df1 = pd.DataFrame(zip(foo,moo,boo),columns=col)\n",
+    "df1\n",
+    "\n"
    ]
   },
   {
