cleaning levels. Good stuff in histogram to add to kde

--- a/cleanit.ipynb
+++ b/cleanit.ipynb
@@ -56,62 +56,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130403\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130429\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130503\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130525\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130601\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20130608\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130403\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130429\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130503\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130525\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130601\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130608\n",
       "2014\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140323\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140407\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140413\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140420\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140428\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140502\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140511\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140517\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140527\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140531\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20140605\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140323\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140407\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140413\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140420\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140428\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140502\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140511\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140517\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140527\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140531\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140605\n",
       "2015\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150218\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150306\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150325\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150403\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150409\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150415\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150427\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150501\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150528\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20150608\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150218\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150306\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150325\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150403\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150409\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150415\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150427\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150501\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150528\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150608\n",
       "2016\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160326\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160407\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160416\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160426\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160509\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160527\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160607\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160613\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160620\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160625\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160701\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160708\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20160401\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160326\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160407\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160416\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160426\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160509\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160527\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160607\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160613\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160620\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160625\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160701\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160708\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160401\n",
       "2017\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170129\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170303\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170401\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170502\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170604\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170709\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170717\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170816\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20170727\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170129\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170303\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170401\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170502\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170604\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170709\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170717\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170816\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170727\n",
       "2018\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20180423\n",
-      "output filename /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/arr_20180528\n"
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2018/arr_20180423\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2018/arr_20180528\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
     "        dt_str = \"\".join([c for c in dt_str if c.isnumeric()]) #grabs numeric values\n",
     "        dt_str = dt_str[:8] #HARD CODE (but works!)...grabs just yyyymmdd and not the numbers in 3p0m.tif\n",
     "\n",
-    "        out_fname = out_path + 'arr_' + dt_str # generate output filename (appends date string)\n",
+    "        out_fname = out_path + '{}/arr_'.format(year) + dt_str # generate output filename (appends date string)\n",
     "\n",
     "        \n",
     "        ''' clip & clean data'''\n",
@@ -155,13 +155,15 @@
     "#             plt.imshow(out_image[0], cmap='Blues')\n",
     "#             plt.show()\n",
     "            \n",
-    "        print('output filename = ', out_fname)   \n",
-    "        np.save(out_fname, out_image)  \n",
+    "        print('output filename = ', out_fname)\n",
+    "        \n",
+    "        ''' SAVE FILE HERE'''\n",
+    "#         np.save(out_fname, out_image)  #UNCOMMENT IF RERUNNING\n",
     "            \n",
     "#             print('out filename', out_fname)\n",
     "#             print(type(out_image), out_image.shape)\n",
     "            \n",
-    "\n"
+    "# NOTE - if regenerating after a delete all, you will need to remake empty 2013-2018 directories in level_1 dir. \n"
    ]
   },
   {
